--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,35 @@
 scratch
 *.nupkg
+
+# IDE Files  and Build Tool #
+target
+.classpath
+.project
+.settings
+settings.xml
+configs/
+.DS_Store
+version.json
+.idea/
+dependency-reduced-pom.xml
+
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
